remove project details API, update list projects API (#29)
