# docs/swagger.yaml
@@ -45,31 +45,10 @@ definitions:
       start_date:
         type: string
     type: object
-  db.GetProjectRow:
-    properties:
-      cv_profile_id:
-        type: integer
-      description:
-        type: string
-      hex_theme_color:
-        type: string
-      id:
-        type: integer
-      image:
-        type: string
-      project_url:
-        type: string
-      technologies_used:
-        items:
-          type: string
-        type: array
-      title:
-        type: string
-    type: object
   db.ListProjectsRow:
     properties:
-      cv_profile_id:
-        type: integer
+      description:
+        type: string
       hex_theme_color:
         type: string
       id:
@@ -143,37 +122,6 @@ paths:
       summary: Get CV profile
       tags:
       - cv-profiles
-  /project-details/{id}:
-    get:
-      description: Get project details with provided ID
-      parameters:
-      - description: Project ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/db.GetProjectRow'
-        "400":
-          description: Invalid ID
-          schema:
-            $ref: '#/definitions/api.ErrorResponse'
-        "404":
-          description: Project with given ID does not exist
-          schema:
-            $ref: '#/definitions/api.ErrorResponse'
-        "500":
-          description: Any other server-side error
-          schema:
-            $ref: '#/definitions/api.ErrorResponse'
-      summary: Get project details
-      tags:
-      - projects
   /projects/{id}:
     get:
       description: List projects for a profile cv with provided ID
